feat: added new path for check auth
