# app/docs/swagger.json
@@ -4,6 +4,35 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/auth/isLoggedIn": {
+            "get": {
+                "description": "Handle checking if the user is logged in",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Handle checking if the user is logged in",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response-bool"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Response-string"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "$ref": "#/definitions/Response-string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/auth/login": {
             "post": {
                 "description": "Handle login and set the access token into the cookie",
